doc/grammar
 <prog>     ::= <stmts>
 <stmts>    ::= <stmt> ";" <stmts>
 <stmts>        ::= "epsilon"
 <stmt>     ::= "var" <var_ident> ":" <type> <var_assgnmnt>
                | <var_ident> ":=" <expr>
                | "for" <var_ident> "in" <expr> ".." <expr> "do"
                    <stmts> "end" "for"
                | "read" <var_ident>
                | "print" <expr>
                | "assert" "(" <expr> ")"
 <var_assgnmnt> ::= ":=" <expr>
 <var_assgnmnt> ::= "epsilon"
 <expr>     ::= <opnd> <op_opnd>
                | <unary_op> <opnd>
 <op_opnd>  ::= <op> <opnd>
 <op_opnd>  ::= "epsilon"
 <opnd>     ::= <int>
                | <string>
                | <var_ident>
                | "(" expr ")"
 <type>     ::= "int" | "string" | "bool"
 <var_ident>    ::= <ident>
 <reserved keyword>     ::= "var" | "for" | "end" | "in" | "do" | "read"
                        | "print" | "int" | "string" | "bool" | "assert"
